Fixes bug where bottom content was hidden by navbar

--- a/packages/yibei/yibei_page/css/style.css
+++ b/packages/yibei/yibei_page/css/style.css
@@ -29,3 +29,8 @@ body
 	opacity: 0.15;
 	z-index: -1;
 } 
+
+div.main
+{
+	padding-bottom: 100px;
+}
